@@ -1,8 +1,7 @@
 # the handles dir doesn't apply to windows
-if PLATFORM_WIN32
-SUBDIRS = utils io-layer monoburg os metadata cil dis \
-	arch monograph interpreter mini tests benchmark profiler
-else
-SUBDIRS = utils io-layer monoburg os metadata cil dis \
-	arch monograph interpreter mini tests benchmark handles profiler
+if ! PLATFORM_WIN32
+HANDLES = handles
 endif
+
+SUBDIRS = utils io-layer monoburg os cil metadata dis \
+      arch monograph interpreter mini tests benchmark $(HANDLES) profiler
